--- a/src/style.css
+++ b/src/style.css
@@ -784,7 +784,7 @@ footer ul:nth-child(4) { transition-delay: 0.8s; }
   }
 
   header img {
-    height: 48px;
+    height: 42px;
   }
 
   header {
@@ -807,6 +807,7 @@ footer ul:nth-child(4) { transition-delay: 0.8s; }
   main #hero {
     padding-top: 7rem;
     padding-bottom: 7rem;
+    text-align: center;
   }
 
   main #hero h1 {
